# flicker

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  flicker.service  flicker_0.1-1_all.deb  flicker_0.1-1_amd64.buildinfo  flicker_0.1-1_amd64.changes  grab-screen  pyproject.toml
.github/workflows/: lint.yml
flicker/: .gitignore  README.md  __init__.py  app.py  grab_screen.py  keyboard_listener.py  requirements.txt  screenshot.py
packaging/appimage/: AppImageBuilder.yml
packaging/debian/: changelog  control  copyright  files  flicker.install  flicker.postinst.debhelper  flicker.postrm.debhelper  rules
packaging/debian/Debian/Debhelper/Buildsystem/: pyproject.pm
packaging/debian/flicker/DEBIAN/: control  md5sums  postinst  postrm
packaging/fedora/: flicker.spec
packaging/flatpak/: com.github.flicker.yaml
packaging/snap/: snapcraft.yaml
resources/: flicker.desktop
